--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,14 +2,16 @@
 
 header {
     display: flex;
-    background-color: #495e57;
-    justify-content: space-around;
-    align-content: center;
-    height: 40vh;
+    flex-direction: column;
+    background-color: #495e57;    
+    justify-content: center;
+    align-items: center;
     width: 100vw;
+    height: auto;
+    padding-bottom: 30px;
 }
 
-h1 {
+header h1 {
     color: #f4ce14;
     font-size: 3.5rem;
     margin: 10px 0 0 0;
@@ -17,7 +19,7 @@ h1 {
     line-height: 0.3;
 }
 
-h2 {
+header h2 {
     color: #edefee;
     padding: 0;
     margin-top: 0;
@@ -25,27 +27,31 @@ h2 {
     font-size: 24pt;
 }
 
-p {
+header p {
     color: #edefee;
     font-weight: 600;
     
 }
 
 .heroImgContainer {
-    /* display: flex;
-    justify-content: center;
-    align-self: center; */
-    width: 300px;
-    height: 350px;
-    
-    margin: 30px 0;
+
+    display: flex;
+    width: 375px;
+    height: 370px;
+    overflow: hidden;
+    margin: 30px 5% 0 5%;
     border-radius: 5%;
     overflow: hidden;
 }
 
-@media (max-width: 680px) {
+.heroImg {
+    display: flex;
+    width: 100%;
+}
 
-    header {
+@media (min-width: 680px) {
+
+    /* header {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -61,14 +67,14 @@ p {
         width: 350px;
         height: 370px;
         overflow: hidden;
-    }
+        margin: 30px 5% 0 5%;
 
-    .heroImg {
-        display: flex;
-        justify-content: center;
-        align-content: space-around;
-        width: 100vw;
-    }
+        width: 250px;
+        height: 250px;
+        overflow: hidden;
+    } */
+
+
 }
 
 @media (min-width: 680px) and (max-width: 1024px){
@@ -84,7 +90,7 @@ p {
     
     .heroImgContainer {
         display: flex;
-        margin: 30px 5% 0 15px;
+        margin: 30px 5% 0 5%;
 
         width: 250px;
         height: 250px;
