--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -2,17 +2,20 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: center;
-    margin: 80px 0 0 0;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0 30px 0;
 }
 
 .highlights {
     display: flex;
-    justify-content: space-between;
+    width: 70vw;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .dishCardContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: center;
@@ -20,6 +23,7 @@
     border: 1px;
     border-color: black;
     margin: 35px 0 0 0;
+    gap: 30px;
 }
 
 .dishCard {
@@ -29,7 +33,7 @@
     border-radius: 15px 15px 0 0;
     overflow: hidden;
     /* gap: 20px; */
-    width: 275px;
+    width: 60vw;
 }
 
 .dishCardTitle {
@@ -53,4 +57,8 @@
 
 .dishSpecialsH1 {
     color: black;
+    font-size: 3rem;
+    margin: 15px 0 20px 0;
+    font-weight: 500;
+    line-height: 0.3;
 }
