--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,4 +1,4 @@
-.nav{
+nav{
     display: flex;
     justify-content: space-between;
     align-content: center;
@@ -6,8 +6,7 @@
     font-family: 'Karla', sans-serif;
     font-size: 1rem;
     font-weight: bold;
-    width: 70vw;
-    margin-left: 15%;
+    width: 90vw;
 }
 
 ul {
@@ -31,14 +30,15 @@ a {
 }
 
 .logo {
-    margin-right: 2rem;
-    /* padding-left: 15px; */
+    margin-left: 5%;
 }
 
 .hamburger {
-    display: none;
-    margin-right: 25px;
     cursor: pointer;
+}
+
+.navList {
+    display: none;
 }
 
 .sideNav {
@@ -72,31 +72,10 @@ a {
 
 
 
-@media (max-width: 680px) {
-    .nav {
-        justify-content: space-between;
-        width: unset;
-        margin-left: 2%;
-    }
-    .navList {
-        display: none;
-    }
 
-    button {
-        width: unset;
-    }
-
-    .logo {
-        margin-left: 0;
-    }
-
-    .hamburger{
-        display: unset;
-    }
-}
 
 @media (min-width: 680px) and (max-width: 1024px){
-    .nav {
+    nav {
         justify-content: space-between;
         width: unset;
         margin-left: 2%;
