--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     margin: 30px 0 30px 0;
+    height: auto;
 }
 
 .highlights {
@@ -13,13 +14,17 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.highlights button {
+    width: 50%;
+}
 .dishCardContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: center;
-    width: 70vw;
+    width: 65vw;
     border: 1px;
     border-color: black;
     margin: 35px 0 0 0;
@@ -61,4 +66,47 @@
     margin: 15px 0 20px 0;
     font-weight: 500;
     line-height: 0.3;
+}
+
+@media (min-width: 750px) {
+    .highlights {
+        display: flex;
+        width: 80vw;
+        margin: 30px 0 0;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .highlights button {
+        width: 20%;
+    }
+    .dishCard {
+        display: flex;
+        flex-direction: column;
+        background-color: #edefee;
+        border-radius: 15px 15px 0 0;
+        overflow: hidden;
+        /* gap: 20px; */
+        width: 350px;
+    }
+
+    .dishCardContainer {
+        display: flex;
+        flex-direction: row;
+        width: 80vw;
+        border: 1px;
+        border-color: black;
+        margin: 35px 0 0 0;
+        gap: 20px;
+    }
+    .dishCardDescription {
+        color: black;
+        font-weight: 400;
+        height: 100px;
+    }
+
+    .dishImage {
+        max-height: 230px;
+    }
+
 }
