--- a/src/components/BookingPage/BookingPage.css
+++ b/src/components/BookingPage/BookingPage.css
@@ -1,7 +1,7 @@
 
 .bookingBanner {
     width: 100%;
-    height: 125px;
+    height: 105px;
     background-color: rgba(0, 0, 0, .7);
     z-index: 1;
     position: absolute;
@@ -9,7 +9,7 @@
 
 .bookingsPageContainer h1 {
     color: #f4ce14;
-    margin: 5% 5%;
+    margin: 4% 5%;
     line-height: 1rem;
     font-size: 3rem;
     font-weight: 500;
@@ -23,4 +23,49 @@
 .bookingsPageContainer h4 {
     margin: 5% 5%;
     font-size: 1.5rem;
+}
+
+.bookingPageHeroImg {
+    background: url('../../assets/ronan-kruithof-PCE0T5i4pDI-unsplash.jpg') no-repeat;
+    background-size: cover;
+    height: 40vh;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+@media (min-width: 750px) {
+    .bookingsPageContainer h1 {
+        margin: 30px 5%;
+    }
+
+    .bookingFormContainer {
+        display: flex;
+        flex-direction: column;
+        margin: -550px 10% 30px auto;
+        font-weight: bold;
+        width: 500px;
+        color: #edefee;
+        border-radius: 15px;
+        background-color: rgba(0,0,0,.8);
+        box-shadow: 1px 1px 2px 1px rgba(253, 253, 253, 0.1);
+
+
+
+
+    }
+
+    .bookingsPageContainer h4 {
+        margin: 5% 5%;
+        font-size: 1.5rem;
+    }
+
+    .bookingPageHeroImg {
+        background: url('../../assets/ronan-kruithof-PCE0T5i4pDI-unsplash.jpg') no-repeat;
+        background-size: cover;
+        height: 90vh;
+        overflow: hidden;
+        z-index: -1;
+    }
+
 }
