--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -29,16 +29,18 @@
     border-color: black;
     margin: 35px 0 0 0;
     gap: 30px;
+    
 }
 
 .dishCard {
     display: flex;
     flex-direction: column;
     background-color: #edefee;
-    border-radius: 15px 15px 0 0;
+    border-radius: 15px 15px;
     overflow: hidden;
     /* gap: 20px; */
     width: 60vw;
+    box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
 .dishCardTitle {
@@ -48,6 +50,7 @@
 
 .dishCardInfo {
     padding: 0 20px;
+    /* background-color: rgba(73, 94, 87, .8); */
 }
 
 .dishCardDescription {
